--- a/.env.development
+++ b/.env.development
@@ -2,9 +2,9 @@ NODE_ENV=development
 
 MYSQL_HOST="localhost"
 MYSQL_PORT="3306"
-MYSQL_DATABASE="cmtool"
-MYSQL_USER="CMToolUnited"
-MYSQL_PASSWORD="CMToolUnitedUser"
-MYSQL_ROOT_PASSWORD="CMToolUnitedRoot"
+MYSQL_DATABASE="tuonghc_tools"
+MYSQL_USER="tuonghc"
+MYSQL_PASSWORD="tuonghc"
+MYSQL_ROOT_PASSWORD="tuonghcroot"
 
 DATABASE_URL="mysql://root:${MYSQL_ROOT_PASSWORD}@${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}"
