--- a/.infra/buildspec.yml
+++ b/.infra/buildspec.yml
@@ -14,16 +14,23 @@ phases:
       - echo Building the Docker image...
       - docker build -t my-image -f ./docker/Dockerfile .
       - docker images  # List Docker images to verify build 
-      - docker tag my-image:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:latest
+      - docker tag my-image:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME/nextjs-tools:latest
       - docker images  # List Docker images to verify tagging
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...to ECR
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:latest
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME/nextjs-tools:latest
       - echo Docker image pushed to ECR
+      - echo Writing image to Definitions file...
+      - printf '[{"name":"nextjs-tools","imageUri":"%s"}]' $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME/nextjs-tools:latest > imagedefinitions.json
+      - cat imagedefinitions.json
 env:
   variables:
     AWS_ACCOUNT_ID: "641131565149"
     AWS_DEFAULT_REGION: "ap-northeast-1"
-    IMAGE_REPO_NAME: "hochituong7/nextjs-tools"
+    IMAGE_REPO_NAME: "hochituong7"
+artifacts:
+  files: imagedefinitions.json
+  name: imagedefinitions.json
+  discard-paths: yes
