--- a/.infra/buildspec.yml
+++ b/.infra/buildspec.yml
@@ -29,7 +29,7 @@ env:
   variables:
     AWS_ACCOUNT_ID: "641131565149"
     AWS_DEFAULT_REGION: "ap-northeast-1"
-    IMAGE_REPO_NAME: "hochituong7-test"
+    IMAGE_REPO_NAME: "hochituong7"
 artifacts:
   files: imagedefinitions.json
   name: imagedefinitions.json
